--- a/package.json
+++ b/package.json
@@ -1,7 +1,8 @@
 {
   "name": "html-router",
-  "private": true,
-  "version": "0.0.0",
+  "version": "0.0.1",
+  "description": "A simple SPA router that does not use any framework.",
+  "main": "index.ts",
   "type": "module",
   "scripts": {
     "dev": "vite",
@@ -12,7 +13,6 @@
   "devDependencies": {
     "@playwright/test": "^1.43.1",
     "@types/node": "^20.12.7",
-    "jest": "^29.7.0",
     "prettier": "3.2.5",
     "typescript": "^5.2.2",
     "vite": "^5.2.0",
