update test script path to include field

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -19,5 +19,5 @@
     "noUnusedParameters": true,
     "noFallthroughCasesInSwitch": true
   },
-  "include": ["src"]
+  "include": ["src", "tests/e2e/router-navigation-test.ts"]
 }
