--- a/.github/workflows/vitest.yml
+++ b/.github/workflows/vitest.yml
@@ -1,4 +1,4 @@
-name: Playwright Tests
+name: Vitest Tests
 on:
   push:
     branches: [main, master]
@@ -6,7 +6,7 @@ on:
     branches: [main, master]
 jobs:
   test:
-    timeout-minutes: 60
+    timeout-minutes: 30
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v4
@@ -15,13 +15,11 @@ jobs:
           node-version: lts/*
       - name: Install dependencies
         run: npm ci
-      - name: Install Playwright Browsers
-        run: npx playwright install --with-deps
-      - name: Run Playwright tests
-        run: npx playwright test
+      - name: Run Vitest tests
+        run: npx vitest run --runInBand
       - uses: actions/upload-artifact@v4
         if: always()
         with:
-          name: playwright-report
-          path: playwright-report/
+          name: vitest-results
+          path: test-results/
           retention-days: 30
